--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ numpy==1.26.4
 scikit-learn==1.5.1
 matplotlib==3.9.2
 seaborn==0.13.2
-tensorflow==2.17.0
-transformers==4.44.2
-torch==2.4.1
+tensorflow-cpu==2.15.0
+h5py==3.9.0
+protobuf==4.23.3
+transformers==5.0.0
+torch==2.1.0
+
