--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ seaborn==0.13.2
 tensorflow-cpu==2.15.0
 h5py==3.9.0
 protobuf==4.23.3
-transformers==4.41.2
+transformers>=4.30.0
 torch==2.1.0
+
 
 
